test/classes/initializers/errors/name-bad-field.future
feature request: Name fields in 'used before initialized' errors

Issue #8295
